<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".WelcomeActivity"
    android:background="@color/bkg_main_water">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_welcome"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:typeface="monospace"
            android:textSize="@dimen/dpi_txt"
            android:gravity="center_horizontal"
            android:textColor="@color/Black"
            />

    </FrameLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="15dp"
            android:background="@color/bkg_jam_true">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/str_reg"
                android:id="@+id/button2"
                android:typeface="normal"
                android:background="@color/Blacked_2"
                android:textSize="16sp"
                android:textColor="@color/bkg_main_water"
                android:singleLine="true"
                android:layout_weight="1"
                android:maxWidth="100dp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="10dp"></LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/log_in"
                android:id="@+id/button"
                android:typeface="normal"
                android:background="@color/Blacked_2"
                android:textColor="@color/bkg_main_water"
                android:alpha="100"
                android:singleLine="true"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="15dp"
            android:background="@color/bkg_jam_true"></LinearLayout>
    </TableLayout>

</RelativeLayout>
