<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:background="@color/bkg_main_water"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="15dp"
            android:background="@color/bkg_jam_true"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_need_reg"
                android:id="@+id/textView4"
                android:textColor="@color/material_grey_900"
                android:singleLine="false"
                android:textSize="@dimen/txt_16size"
                android:textStyle="bold" />
        </LinearLayout>
    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:id="@+id/tableLayout7">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bkg_main_water"
            android:minHeight="10dp"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"></TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ok"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:alpha="100"
                android:background="@color/Blacked_2"
                android:textColor="@color/bkg_main_water" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="10dp"></LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_back"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:alpha="100"
                android:background="@color/Blacked_2"
                android:textColor="@color/bkg_main_water" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:background="@color/bkg_water"
        android:layout_below="@+id/tableLayout3"
        android:layout_above="@+id/tableLayout7">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name_person"
                    android:id="@+id/textView2"
                    android:textColor="@color/Blacked_2"
                    android:gravity="center"
                    android:textSize="@dimen/txt_16size"
                    android:textStyle="bold"

                    />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:background="@color/Black"
                    android:gravity="center"
                    android:hint="@string/name_person"
                    android:textColor="@color/White_my"
                    android:textColorHint="@color/White_my"
                    android:textSize="@dimen/txt_20size"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="15dp"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/pass_need"
                    android:id="@+id/textView3"
                    android:gravity="center"
                    android:textColor="@color/Blacked_2"
                    android:textSize="@dimen/txt_16size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:gravity="center"
                    android:background="@color/Black"
                    android:hint="@string/pass_need"
                    android:textColor="@color/White_my"
                    android:textColorHint="@color/White_my"
                    android:textSize="@dimen/txt_20size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="5dp"></TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/rep_pass"
                    android:id="@+id/textView5"
                    android:gravity="center"
                    android:textColor="@color/Blacked_2"
                    android:textSize="@dimen/txt_16size"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editText3"
                    android:gravity="center"
                    android:background="@color/Black"
                    android:hint="@string/rep_pass"
                    android:inputType="textPassword"
                    android:textColorHint="@color/White_my"
                    android:textColor="@color/White_my"
                    android:textSize="@dimen/txt_20size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="15dp"
                android:background="@color/bkg_water"></TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:minHeight="40dp">

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_pass2"
                    android:id="@+id/switch1"
                    android:textColor="@color/Blacked_2"
                    android:checked="false"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>